--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "aos": "^3.0.0-beta.6",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "embla-carousel-autoplay": "^8.0.2",
     "embla-carousel-react": "^8.0.0",
     "lucide-react": "^0.356.0",
     "next": "^14.0.4",
